--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -188,7 +188,7 @@ html {
     margin-top: 0.3rem;
     font-weight: 300;
     font-size: 1.2rem;
-    color: #a57606;
+    color: #57606f;
 }
 
 #weathercon {
