--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -112,7 +112,7 @@ html {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
 .humidity, .wind{
@@ -131,9 +131,6 @@ html {
     margin-right: 20px;
 }
 
-.weather-details i{
-    font-size: 20px;
-}
 
 .weather-details .text{
     margin-left: 1rem;
@@ -165,7 +162,7 @@ html {
     margin-top: 0.5rem;
     color: #57606f;
     font-size: 1.2rem;
-    font-weight: 300;
+    font-weight: 500;
     text-transform: uppercase;
 }
 
@@ -180,13 +177,13 @@ html {
     margin-top: 0.3rem;
     font-size: 1rem;
     font-weight: 500;
-    color: #57606f;
+    /* color: #57606f; */
 }
 
 .tempmin_max {
     text-align: center;
     margin-top: 0.3rem;
-    font-weight: 300;
+    font-weight: 500;
     font-size: 1.2rem;
     color: #57606f;
 }
@@ -204,10 +201,6 @@ html {
     font-size: 6rem;
     animation: fas-anime 3s infinite alternate;
     
-}
-.copyright{
-    margin-top: 3rem;
-    font-weight: 600;
 }
 
 @keyframes fas-anime {
