--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -8,7 +8,6 @@
 
 body {
     background: #f3f2ef;
-    /* background: rgba(237, 203, 166, 0.936); */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,64 +29,14 @@ html {
 .box {
     width: 25vw;
     height: 60vh;
-    border-radius: 0.5rem;
+    border-radius: 1rem 1rem 0 0;
     box-shadow: 0 0.2rem 3rem rgba(0, 0, 0, 0.2);
-    /* background: #a5bbdd; */
-    background: rgba(110, 241, 196, 0.733);
     position: relative;
-    overflow: hidden;
     transform: translate3d(0, 0, 0);
     min-width: 20rem;
     min-height: 35rem;
-}
-
-.wave {
-    opacity: 0.3;
-    position: absolute;
-    top: 120%;
-    left: 50%;
-    background: #fff;
-    /* background: rgb(227, 158, 74); */
-    width: 50rem;
-    height: 50rem;
-    margin-left: -25rem;
-    margin-top: -25rem;
-    transform-origin: 50% 48%;
-    border-radius: 43%;
-    animation: drift 3000ms infinite linear;
-    z-index: 1;
-}
-
-.wave.-three {
-    animation: drift 7000ms infinite linear;
-    z-index: 2 !important;
-    opacity: 0.2;
-}
-
-.wave.-two {
-    animation: drift 7000ms infinite linear;
-    opacity: 0.1;
-    z-index: 3 !important;
-}
-
-.box::after {
-    content: "";
-    display: block;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 11;
-    transform: translate3d(0, 0, 0);
-}
-
-@keyframes drift {
-    from {
-        transform: rotate(0deg);
-    }
-    from {
-        transform: rotate(360deg);
-    }
+    background-color: rgb(240, 252, 243);
+    padding-bottom: 1rem;
 }
 
 .info {
@@ -99,152 +48,66 @@ html {
     width: 100%;
     height: 60vh;
     z-index: 4;
+    gap: 2rem;
 }
 
 .location {
     margin-top: -4.0rem;
-    text-align: center;
-    font-weight: 800;
+    font-weight: 600;
     font-size: 4rem;
     text-transform: capitalize;
 }
-.weather-details{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1.5rem;
-}
-
-.humidity, .wind{
-    display: flex;
-    align-items: center;
-}
-
-.humidity{
-    margin-left: 20px;
-}
-.weather-details i{
-    font-size: 20px;
-}
-
-.wind{
-    margin-right: 20px;
-}
-
-
-.weather-details .text{
-    margin-left: 1rem;
-    font-size: 10px;
-}
-
-.text span{
-    font-size: 1rem;
-    font-weight: 700;
-}
-
-
-
- #anime{
-    animation: rotates 3s infinite ease;
- }
-
-@keyframes rotates {
-    from {
-        transform: translateX(-0.5rem);
-    }
-    to {
-        transform: translateX(0.5rem);
-    }
-}
-
-#date {
-    text-align: center;
-    margin-top: 0.5rem;
-    color: #57606f;
-    font-size: 1.2rem;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-
 .temp {
-    margin-top: 1rem;
-    text-align: center;
     font-size: 4rem;
+    font-weight: 600;
 }
 
 .feelslike{
-    text-align: center;
-    margin-top: 0.3rem;
-    font-size: 1rem;
-    font-weight: 500;
-    /* color: #57606f; */
+    font-size: 1.5rem;
+    font-weight: 550;
 }
 
 .tempmin_max {
     text-align: center;
     margin-top: 0.3rem;
-    font-weight: 500;
+    font-weight: 550;
     font-size: 1.2rem;
-    color: #57606f;
 }
-
-#weathercon {
-    margin-top: 0.2em;
-    height: 55%;
+.weather-details{
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3em;
+    justify-content: space-around;
+    font-size: 2rem;
 }
 
-#weathercon ,fa fa-sun {
-    font-size: 6rem;
-    animation: fas-anime 3s infinite alternate;
-    
+
+span{
+    font-size: 1rem;
+    font-weight: 700;
+}
+.footer {
+    box-shadow: 0 0.2rem 3rem rgba(0, 0, 0, 0.2);
+    background-color: rgb(240, 252, 243);
+    border-radius: 0 0 1rem 1rem;
+    padding: 1rem;
+    font-size: 1rem;
+    text-align: center;
 }
 
-@keyframes fas-anime {
-    from {
-        transform: scale(1.1);
-    }
-    to {
-        transform: scale(1.8)
-    }
-}
 
-@media (max-width: 600px) {
+@media screen and (max-width: 1024px) {
     .box {
-        width: 90vw;
-        height: 80vh;
-    }
-
-    .wave {
-        top: 85%;
-    }
-
-    #weathercon {
-        font-size: 5em;
+        width: 60vw;
+        height: 70vh;
+        min-width: 35rem;
+        min-height: 60rem;
     }
 
     .info {
-        font-size: 1.5em;
+        margin-top: 6rem;
+        font-size: 1.5rem;
+        gap: 3rem;
     }
-}
-
-@media (max-width: 500px) {
-    .box {
-        height: 80vh;
-    }
-
-    .wave {
-        top: 115%;
-    }
-}
-
-body > span {
-    width: 100vw;
-    text-align: center;
-    color: grey;
 }
 
 .inputData {
